[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "Eporner_API"
version = "1.9.5"
description = "A Python API for the Porn Site Eporner.com"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9" # 3.9 due to httpx requirements
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]
dependencies = [
    "bs4",
    "eaf_base_api",
]
classifiers = [
    "Programming Language :: Python",
]

[project.optional-dependencies]
av = ["av; python_version >= '3.10'"]
full = ["lxml", "httpx[http2]", "httpx[socks5]"]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/EPorner_API"

[project.scripts]
eporner_api = "eporner_api.eporner_api:main"

[tool.uv.build-backend]
module-name = "eporner_api"
module-root = ""
