[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "Eporner_API"
version = "2.2"
description = "A Python API for the Porn Site Eporner.com"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]
dependencies = [
    "selectolax",
    "bs4",
    "eaf-base-api",
]
classifiers = [
    "Programming Language :: Python",
]

[project.optional-dependencies]
full = ["lxml"]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/EPorner_API"

[project.scripts]
eporner_api = "eporner_api.eporner_api:main"

[tool.uv.build-backend]
module-name = "eporner_api"
module-root = ""

[tool.uv.sources]
eaf-base-api = { path = "../eaf_base_api", editable = true }
